# monitor-system

./: .gitignore  CMakeLists.txt
common/: CMakeLists.txt
common/include/utils/: display_monitor_info.h  log.h  signal_handler.h
common/src/utils/: display_monitor_info.cpp  signal_handler.cpp
manager/: CMakeLists.txt
manager/include/rpc/: monitor_info_manager.h
manager/include/server/: manager_server.h
manager/include/utils/: host.h  manager_config.h  manager_log.h
manager/src/: main.cpp
manager/src/rpc/: monitor_info_manager.cpp
manager/src/server/: manager_server.cpp
manager/src/utils/: host.cpp
proto/: CMakeLists.txt  host_info.proto  info_manager.proto  monitor_info.proto  monitor_info_service.proto
worker/: CMakeLists.txt
worker/include/collector/: collector_interface.h  host_info_collector.h  info_collector.h  monitor_info_collector.h
worker/include/rpc/: monitor_info_reporter.h  monitor_pusher.h
worker/include/utils/: display_monitor_info.h  info.h  worker_config.h  worker_log.h
worker/src/: main.cpp
worker/src/collector/: collector_interface.cpp  host_info_collector.cpp  info_collector.cpp  monitor_info_collector.cpp
worker/src/rpc/: monitor_info_reporter.cpp  monitor_pusher.cpp
worker/src/utils/: display_monitor_info.cpp
